Fixed display of search box with Large scaling selection, fixed display of flashed messages on mobile (All Recipes/Favorites)

--- a/app/static/all-recipes.css
+++ b/app/static/all-recipes.css
@@ -123,6 +123,8 @@
 	--width-btn-default: 137px;
 	--size-btn-icon: 20px;
 	--padding-btn2-icon: 9px;
+	--width-search-cont: 140px;
+	--width-search-cont-mobile: calc(100% - 260px);
 	--size-bg-search-box: 22px;
 	--font-search-box: 18px;
 	--height-search-box: 38px;
@@ -151,6 +153,8 @@
 	--width-btn-default: 137px;
 	--size-btn-icon: 20px;
 	--padding-btn2-icon: 9px;
+	--width-search-cont: 140px;
+	--width-search-cont-mobile: calc(100% - 260px);
 	--size-bg-search-box: 22px;
 	--font-search-box: 18px;
 	--height-search-box: 38px;
@@ -179,6 +183,8 @@
 	--width-btn-default: 143px;
 	--size-btn-icon: 22px;
 	--padding-btn2-icon: 8px;
+	--width-search-cont: 128px;
+	--width-search-cont-mobile: calc(100% - 266px);
 	--size-bg-search-box: 24px;
 	--font-search-box: 20px;
 	--height-search-box: 40px;
@@ -302,7 +308,7 @@
 .search-cont {
 	float: right; 
 	margin-right: 56px;
-	width: 140px;
+	width: var(--width-search-cont);
 }
 .search-box {
 	background: var(--color-search-box-bg);
@@ -695,6 +701,8 @@
 @media screen and (max-width: 1000px) { 
 	.block1inner {width: 100%;}
 	#block1 p {padding-left: 10px; padding-right: 10px;}
+	#flashed-err {margin-left: 10px; margin-right: 10px;}
+	#flashed-norm {margin-left: 10px; margin-right: 10px;}
 	.recipenavleft {padding-left: 10px;}
 	.btn2 {margin-right: 10px;}
 	.settingsbtn {margin-right: 10px;}
@@ -744,7 +752,7 @@
 	.recipenavleft {float: none; text-align: center;}
 	.recbtn {margin-top: 10px;}
 	.recipenavright {width: 100%;}
-	.search-cont {width: calc(100% - 260px);}
+	.search-cont {width: var(--width-search-cont-mobile);}
 	.recipe1-text {
 		padding-left: 12px; 
 		padding-right: 12px; 
